objects/Oppty20_User_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <description>Json string with selected countries.</description>
        <inlineHelpText>Json string with selected countries.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Id of the record in the CurrencyType object.</description>
        <inlineHelpText>Id of the record in the CurrencyType object.</inlineHelpText>
        <label>Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Json string with selected regions.</description>
        <inlineHelpText>Json string with selected regions.</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Json string with selected segments.</description>
        <inlineHelpText>Json string with selected segments.</inlineHelpText>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Team member user id.</description>
        <label>Team</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <label>Time Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>